petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: petclinic-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - PetClinic'
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, HEAD"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"    
spec:
  rules:
  - host: kubemigrate.centralindia.cloudapp.azure.com
    http:
      paths:
      - path: /petclinic/?(.*)
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic
            port:
              number: 80
